--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<link type="text/css" rel="styles" href="styles.css"/>
+		<link type="text/css" rel="stylesheet" href="styles.css"/>
 		<title></title>
 	</head>
     <header class='masthead'>
